# Rust-CLI-Pong-Client

./: Dockerfile  Readme.md  build.sh  launch.sh
cli-app/: Cargo.toml  Dockerfile  Readme.md  entrypoint.sh  launch.sh
cli-app/src/: context.rs  friends.rs  game.rs  game_demo.rs  infos.rs  infos_events.rs  login.rs  main.rs  screen_displays.rs  utils.rs
src/: context.rs  game.rs  game_demo.rs  infos.rs
