[package]
name = "transcendence_cli_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
crossterm = "0.29.0"
device_query = "4.0.1"
env = "1.0.1"
futures = "0.3.31"
futures-util = "0.3.31"
native-tls = "0.2.14"
ratatui = "0.29.0"
reqwest = {version = "0.12.24", features = ["json"]}
serde_json = "1.0.145"
terminal = "0.2.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = {version = "0.28.0", features = ["native-tls"]}
